@@ -222,7 +222,8 @@ end
 --- @param client_id? integer
 --- @param diagnostics lsp.Diagnostic[]
 --- @param is_pull boolean
-local function handle_diagnostics(uri, client_id, diagnostics, is_pull)
+--- @param version integer?
+local function handle_diagnostics(uri, client_id, diagnostics, is_pull, version)
   local fname = vim.uri_to_fname(uri)
 
   if #diagnostics == 0 and vim.fn.bufexists(fname) == 0 then
@@ -231,6 +232,10 @@ local function handle_diagnostics(uri, client_id, diagnostics, is_pull)
 
   local bufnr = vim.fn.bufadd(fname)
   if not bufnr then
+    return
+  end
+
+  if version and util.buf_versions[bufnr] ~= version then
     return
   end
 
@@ -249,7 +254,7 @@ end
 ---@param params lsp.PublishDiagnosticsParams
 ---@param ctx lsp.HandlerContext
 function M.on_publish_diagnostics(_, params, ctx)
-  handle_diagnostics(params.uri, ctx.client_id, params.diagnostics, false)
+  handle_diagnostics(params.uri, ctx.client_id, params.diagnostics, false, params.version)
 end
 
 --- |lsp-handler| for the method "textDocument/diagnostic"
